--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,8 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
-GlobalDefaultGameMode=/Game/Asset/GameMode/BP_GM.BP_GM_C
+GlobalDefaultGameMode=/Game/Asset/GameMode/BP_MainMenuGM.BP_MainMenuGM_C
+GameInstanceClass=/Game/Asset/GI_GameInstance.GI_GameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
